<resources>
    <string name="app_name">Pokedex</string>
    <string name="drop">Drop</string>
    <string name="catc">Catch</string>
    <string name="defense">Defense</string>
    <string name="attack">Attack</string>
    <string name="speed">Speed</string>
    <string name="life">Life</string>
    <string name="see">See</string>
    <string name="go">></string>
    <string name="Ctch_pk">Catch a pokemon</string>
    <string name="srch">Search</string>
    <string name="BtnLog">Login</string>
    <string name="user">Username</string>
    <string name="Trainer">Pokemon trainer username</string>
</resources>